--- a/banks_default.ipynb
+++ b/banks_default.ipynb
@@ -4103,7 +4103,7 @@
         "\n",
         "\n",
         "def plot_permutation_importance(clf, X, y, ax, n=10, seed=42, jobs=-1):\n",
-        "    result = permutation_importance(clf, X, y, n_repeats=n, random_state=seed, n_jobs=jobs)\n",
+        "    result = permutation_importance(clf, X, y, n_repeats=n, random_state=RANDOM_SEED, n_jobs=jobs)\n",
         "    perm_sorted_idx = result.importances_mean.argsort()\n",
         "\n",
         "    ax.boxplot(\n",
@@ -4342,7 +4342,7 @@
         "    \"subsample\": .9,\n",
         "    \"n_jobs\": -1,\n",
         "    \"grid_resolution\": 100,\n",
-        "    \"random_state\": seed,\n",
+        "    \"random_state\": RANDOM_SEED,\n",
         "}\n",
         "\n",
         "display = PartialDependenceDisplay.from_estimator(\n",
@@ -4376,7 +4376,7 @@
         "    \"subsample\": .9,\n",
         "    \"n_jobs\": -1,\n",
         "    \"grid_resolution\": 100,\n",
-        "    \"random_state\": seed,\n",
+        "    \"random_state\": RANDOM_SEED,\n",
         "}\n",
         "\n",
         "display = PartialDependenceDisplay.from_estimator(\n",
@@ -4410,7 +4410,7 @@
         "    \"subsample\": .9,\n",
         "    \"n_jobs\": -1,\n",
         "    \"grid_resolution\": 100,\n",
-        "    \"random_state\": seed,\n",
+        "    \"random_state\": RANDOM_SEED,\n",
         "}\n",
         "\n",
         "display = PartialDependenceDisplay.from_estimator(\n",
