--- a/banks_default.ipynb
+++ b/banks_default.ipynb
@@ -4305,7 +4305,7 @@
         "    \"subsample\": .9,\n",
         "    \"n_jobs\": -1,\n",
         "    \"grid_resolution\": 100,\n",
-        "    \"random_state\": SEED,\n",
+        "    \"random_state\": RANDOM_SEED,\n",
         "}\n",
         "\n",
         "l_pdp_var = [\"lev\",\"cap\",\"liq\"]\n",
